TestSuite/errors/err0102.pas
type TClass = class
event a : integer;
end;

begin
end.